# igogo

./: .gitignore  LICENSE  README.md  meta.yaml  pyproject.toml  setup.py
examples/: chunks.ipynb  display.ipynb  display_custom.ipynb  hello_world.ipynb  markdown.ipynb  monitor.ipynb  plot.ipynb
igogo/: __init__.py  context.py  core.py  exceptions.py  loaders.py  magic.py  output.py  yielder.py
