[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "igogo"
version = "1.1.0"
authors = [
    { name = "Alex Dremov", email = "igogo@alexdremov.me" },
]
description = "Execute several jupyter cells simultaneously"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["jupyterlab", "ipython", "jupyter", "execute", "python"]
dependencies = [
    'IPython >= 8.0.0',
    'greenback >= 1.1.1',
    'matplotlib >= 3.5.0'
]
packages = [
    { include = "igogo" }
]

[project.urls]
"Homepage" = "https://github.com/alexdremov/igogo"
